Add GBP review automation docs and readiness gates

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,7 +38,14 @@ nav:
       - Voice & Language: standards/voice-and-language.md
   - Delivery Playbooks:
       - Phase 0 — Diagnostic: playbooks/phase-0-diagnostic.md
+      - Phase 1 — Stabilization: playbooks/phase-1-stabilization.md
+      - Phase 1 — Access Consolidation: playbooks/phase-1-access-consolidation.md
       - Handoff & Exit: playbooks/handoff-and-exit.md
+  - Automation & Integrations:
+      - GBP Review Responder Readiness: automation/gbp-review-responder-readiness.md
+      - GBP Responder System Prompt: automation/gbp-review-responder-system-prompt.md
+      - GBP Responder Zapier Architecture: automation/gbp-review-responder-zapier-architecture.md
+
   - Reference:
       - SOP Template: reference/templates/sop-template.md
       - ADR Template: reference/templates/adr-template.md
